# ai_service_project

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
Apache/: age_result.html  age_upload.html  animal_result.html  animal_upload.html  app.py  detail.html  feature_result.html  feature_upload.html  history copy.html  history.html  index.html  login.html
Apache/css/: fastbootstrap.rtl.css  fastbootstrap.rtl.min.css  styles.css
app/: app.py  readme.md  requirements.txt
app/.devcontainer/: devcontainer.json
app/flask/: app.py  requirements.txt
app/frontend/: package-lock.json  package.json
app/module/: crawlingModule.py  dbModule.py  faceModule.py
app/templates/: age_result.html  age_upload.html  animal_result.html  animal_upload.html  base.html  detail.html  feature_result.html  feature_upload.html  gender_result.html  gender_upload.html  history.html  index.html  login.html  loginorsignup.html  (+3 more)
code/: admin_upload_celeb.ipynb  face_detecter.ipynb  face_expressions.ipynb  gender.ipynb  googleImageCrawling.ipynb  googleImageCrawlingPlaywright.py  googleImageCrawlingSelenium.py  inception, gender.ipynb  inception.ipynb  new_resnet50_age.ipynb  race_identifier.ipynb  training_face_similarity_model.ipynb
database/: ai_servicedb_age_result.sql  ai_servicedb_animal_result.sql  ai_servicedb_celeb_result.sql  ai_servicedb_face_analysis_results.sql  ai_servicedb_face_anlysis_results.sql  ai_servicedb_feature_result.sql  ai_servicedb_userinfo.sql  ai_servicedb_usertest.sql
login/: app.py
(+17 files in other folders)
